ファイル名を変更

--- a/wordmaker.html
+++ b/wordmaker.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<title>単語文字列生成器</title>
 	<link rel="stylesheet" href="./css/vdialog.css" />
-	<link rel="stylesheet" href="./css/wordgen.css" />
+	<link rel="stylesheet" href="./css/wordmaker.css" />
 	<script src="./scripts/vue.js"></script>
 	<script src="./scripts/vdialog.js"></script>
-	<script src="./scripts/wordgen.js"></script>
+	<script src="./scripts/wordmaker.js"></script>
 </head>
 <body>
 	<h1>単語文字列生成器</h1>
