文字列作成部分の切り離し及びダイアログクラスの名称変更に対応

--- a/wordmaker.html
+++ b/wordmaker.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>単語文字列生成器</title>
-	<link rel="stylesheet" href="./css/vdialog.css" />
+	<link rel="stylesheet" href="./css/ntdialog.css" />
 	<link rel="stylesheet" href="./css/wordmaker.css" />
 	<script src="./scripts/vue.js"></script>
-	<script src="./scripts/vdialog.js"></script>
+	<script src="./scripts/ntdialog.js"></script>
+	<script src="./scripts/wgenerator.js"></script>
 	<script src="./scripts/wordmaker.js"></script>
 </head>
 <body>
@@ -41,14 +42,14 @@
 		</div>
 	</div>
 
-	<div id="dialogs" class="vdialog" style="display: none;">
-		<div class="vdialog-header">
-			<label class="vdialog-title"></label>
-			<button class="vdialog-minimize"></button>
-			<button class="vdialog-maximize"></button>
-			<button class="vdialog-close"></button>
+	<div id="dialogs" class="ntdialog" style="display: none;">
+		<div class="ntdialog-header">
+			<label class="ntdialog-title"></label>
+			<button class="ntdialog-minimize"></button>
+			<button class="ntdialog-maximize"></button>
+			<button class="ntdialog-close"></button>
 		</div>
-		<div class="vdialog-body">
+		<div class="ntdialog-body">
 			<div id="dialogVue">
 				<div>
 					<span>設定ファイル読み込み：</span>
