--- a/wordmaker.html
+++ b/wordmaker.html
@@ -69,8 +69,8 @@
 						<input type="text" v-model="createSetting.setSimple.letters">
 					</div>
 					<div>
-						<span>文字列長</span>
-						<input type="number" v-model="createSetting.setSimple.input">
+						<span>文字列長(カンマ区切りで複数記述可)</span>
+						<input type="text" v-model="createSetting.setSimple.patterns">
 					</div>
 				</div>
 				<div class="setting" v-show="isSimpleCv">
@@ -83,8 +83,8 @@
 						<input type="text" v-model="createSetting.setSimpleCv.vowels">
 					</div>
 					<div>
-						<span>文字列構成</span>
-						<input type="text" v-model="createSetting.setSimpleCv.input">
+						<span>文字列構成(カンマ区切りで複数記述可)</span>
+						<input type="text" v-model="createSetting.setSimpleCv.patterns">
 					</div>
 				</div>
 			</div>
