--- a/wordmaker.html
+++ b/wordmaker.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./css/wordmaker.css" />
 	<script src="./scripts/vue.js"></script>
 	<script src="./scripts/ntdialog.js"></script>
+	<script src="./scripts/otmword.js"></script>
 	<script src="./scripts/wgenerator.js"></script>
 	<script src="./scripts/wordmaker.js"></script>
 </head>
