分割終了．コメント不完全

--- a/wordmaker.html
+++ b/wordmaker.html
@@ -122,6 +122,7 @@
 			<button class="ntdialog-close"></button>
 		</div>
 		<div class="ntdialog-body">
+			<input type="hidden" id="selectedWordId">
 			<div id="equivalentChoice">
 				<div>
 					<button @click="addTranslation">追加</button>
