依存遷移型をchainからdependencyに変更

--- a/wordmaker.html
+++ b/wordmaker.html
@@ -89,22 +89,22 @@
 				<input type="text" v-model="createSetting.simplecv.patterns">
 			</div>
 		</div>
-		<div class="createSettings" v-show="isChainCv">
+		<div class="createSettings" v-show="isDependencyCv">
 			<div>
 				<span>子音文字</span>
-				<input type="text" v-model="createSetting.chaincv.consonants">
+				<input type="text" v-model="createSetting.dependencycv.consonants">
 			</div>
 			<div>
 				<span>母音文字</span>
-				<input type="text" v-model="createSetting.chaincv.vowels">
+				<input type="text" v-model="createSetting.dependencycv.vowels">
 			</div>
 			<div>
 				<span>文字列構成(カンマ区切りで複数記述可)</span>
-				<input type="text" v-model="createSetting.chaincv.patterns">
+				<input type="text" v-model="createSetting.dependencycv.patterns">
 			</div>
 			<div>
 				<span>遷移可能文字設定</span>
-				<div v-for="(transition, index)  in createSetting.chaincv.transitions">
+				<div v-for="(transition, index)  in createSetting.dependencycv.transitions">
 					<input type="text" class="letter" v-model="transition.letter">
 					<input type="text" class="nextLetters" v-model="transition.nextLetters">
 					<button>削除</button>
